[package]
name = "pr-manager"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A GitHub PR manager"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
itertools = "0.14.0"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full", "sync"] }

[dev-dependencies]
insta = "1.42.1"
